// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With fact in URL 1`] = `
<div
  className="foundation"
>
  <div>
    <div
      className="foundation__inner-container"
    >
      <h1
        className="foundation__heading"
      >
        Foundation of Facts
      </h1>
      <p
        className="timeline__instructions"
      >
        Explore Facts in the timeline below.
      </p>
    </div>
    <TimelineView
      path="/foundation/bill-of-rights"
    />
  </div>
</div>
`;

exports[`Without fact in URL 1`] = `
<div
  className="foundation"
>
  <div>
    <div
      className="foundation__inner-container"
    >
      <h1
        className="foundation__heading"
      >
        Foundation of Facts
      </h1>
      <p
        className="timeline__instructions"
      >
        Explore Facts in the timeline below.
      </p>
    </div>
    <TimelineView
      path="/foundation"
    />
  </div>
</div>
`;
